update tag line

--- a/setup.cfg
+++ b/setup.cfg
@@ -13,7 +13,7 @@ description = Cartographic rendering and mesh analytics with PyVista
 long_description = file: README.md
 long_description_content_type = text/markdown
 keywords =
-    cartographic
+    cartography
     mesh
     pyvista
     ugrid
