--- a/setup.cfg
+++ b/setup.cfg
@@ -1,13 +1,50 @@
+[flake8]
+# References:
+#   https://flake8.readthedocs.io/en/latest/user/configuration.html
+#   https://flake8.readthedocs.io/en/latest/user/error-codes.html
+#   https://pycodestyle.readthedocs.io/en/latest/intro.html#error-codes
+#   https://github.com/PyCQA/flake8-import-order
+#   https://gitlab.com/pycqa/flake8-docstrings
+docstring-convention = numpy
+import-order-style = google
+application-import-names = geovista
+select = C,D,E,F,I,W,B,B950
+ignore =
+    # E203: whitespace before ':'
+    E203,
+    # E226: missing whitespace around arithmetic operator
+    E226,
+    # E231: missing whitespace after ',', ';', or ':'
+    E231,
+    # E402: module level imports on one line
+    E402,
+    # E501: line too long
+    E501,
+    # E731: do not assign a lambda expression, use a def
+    E731,
+    # W503: line break before binary operator
+    W503,
+    # W504: line break after binary operator
+    W504
+exclude =
+    .eggs
+    build
+
 [metadata]
-author = SciTools
+author = geovista developers
 author_email = scitools-iris-dev@googlegroups.com
 classifiers =
     Development Status :: 1 - Planning
     Intended Audience :: Science/Research
     License :: OSI Approved :: BSD License
     Natural Language :: English
-    Operating System :: OS Independent
-    Programming Language :: Python :: 3
+    Operating System :: POSIX
+    Operating System :: Unix
+    Operating System :: MacOS
+    Programming Language :: Python :: 3 :: Only
+    Programming Language :: Python :: 3.7
+    Programming Language :: Python :: 3.8
+    Programming Language :: Python :: 3.9
     Topic :: Scientific/Engineering :: Atmospheric Science
 description = Cartographic rendering and mesh analytics with PyVista
 long_description = file: README.md
@@ -29,7 +66,6 @@ version = attr: geovista.__version__
 [options]
 install_requires =
     cartopy
-    click
     pykdtree
     pyvista
     pyvistaqt
@@ -37,19 +73,18 @@ packages = find:
 python_requires =
     >=3.7
 setup_requires =
-    setuptools >=40.8.0
-tests_require = 
-    black ==21.5b0
-    flake8
-    flake8-import-order
-    pre-commit
-    pytest
+    setuptools >=45
+    setuptools-scm >=6.0
 zip_safe = False
 
 [options.extras_require]
 cmap =
     cmocean
     colorcet
+dev =
+    pre-commit
+test =
+    pytest >=6.0
 
 [tool:pytest]
 testpaths =
