--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,28 +1,28 @@
-[tool.black]
-line-length = 88
-target-version = ['py38']
-include = '\.pyi?$'
-exclude = '''
-
-(
-  /(
-      \.eggs         # exclude a few common directories in the
-    | \.git          # root of the project
-    | \.hg
-    | \.mypy_cache
-    | \.tox
-    | \.venv
-    | _build
-    | buck-out
-    | build
-    | dist
-  )/
-  | results
-)
-'''
-
 [build-system]
 # Defined by PEP 518
-requires = ["setuptools>=40.8.0", "wheel"]
+requires = [
+    "setuptools>=45",
+    "setuptools_scm[toml]>=6.0",
+    "wheel"
+]
 # Defined by PEP 517
 build-backend = "setuptools.build_meta"
+
+
+[tool.black]
+line-length = 88
+target-version = ["py37", "py38", "py39"]
+include = '\.pyi?$'
+
+
+[tool.isort]
+force_sort_within_sections = "True"
+known_first_party = "geovista"
+line_length = 88
+profile = "black"
+skip_gitignore = "True"
+verbose = "False"
+
+
+[tool.setuptools_scm]
+write_to = "geovista/_version.py"
