--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,8 +1,16 @@
 # See https://pre-commit.com for more information
 # See https://pre-commit.com/hooks.html for more hooks
+
+files: |
+    (?x)(
+        setup\.py|
+        geovista\/.+\.py
+    )
+minimum_pre_commit_version: 1.21.0
+
 repos:
 -   repo: https://github.com/pre-commit/pre-commit-hooks
-    rev: 'v4.0.1'
+    rev: v4.0.1
     hooks:
         # Prevent giant files from being committed.
     -   id: check-added-large-files
@@ -14,18 +22,27 @@ repos:
     -   id: check-merge-conflict
         # Check for debugger imports and py37+ `breakpoint()` calls in Python source.
     -   id: debug-statements
-        # Don't commit to master branch.
-    -   id: no-commit-to-branch
+        # Don't commit to main branch.
+#    -   id: no-commit-to-branch
+
 -   repo: https://github.com/psf/black
-    rev: '21.7b0'
+    rev: 21.7b0
     hooks:
     -   id: black
-        # Force black to run on whole repo, using settings from pyproject.toml
         pass_filenames: false
         args: [--config=./pyproject.toml, .]
--   repo: https://github.com/PyCQA/flake8
-    rev: '3.9.2'
+
+-   repo: https://gitlab.com/PyCQA/flake8
+    rev: 3.9.2
     hooks:
-        # Run flake8.
     -   id: flake8
+        types: [file, python]
         args: [--config=./.flake8]
+
+-   repo: https://github.com/PyCQA/isort
+    rev: 5.9.3
+    hooks:
+    -   id: isort
+        types: [file, python]
+        args: [--filter-files]
+
