--- a/setup.cfg
+++ b/setup.cfg
@@ -65,7 +65,7 @@ version = attr: geovista.__version__
 
 [options]
 install_requires =
-    cartopy
+    cartopy>=0.20
     pykdtree
     pyvista
     pyvistaqt
@@ -81,7 +81,7 @@ cmap =
 dev =
     pre-commit
 test =
-    pytest >=6.0
+    pytest>=6.0
 
 [tool:pytest]
 testpaths =
