--- a/setup.cfg
+++ b/setup.cfg
@@ -51,9 +51,11 @@ long_description = file: README.md
 long_description_content_type = text/markdown
 keywords =
     cartography
+    earth-science
     mesh
     pyvista
     ugrid
+    vtk
 license = BSD 3-Clause License
 license_file = LICENSE
 name = geovista
@@ -67,6 +69,7 @@ version = attr: geovista.__version__
 install_requires =
     cartopy>=0.20
     pykdtree
+    pyproj>=3.1
     pyvista
     pyvistaqt
 packages = find:
