--- a/setup.cfg
+++ b/setup.cfg
@@ -3,12 +3,11 @@
 #   https://flake8.readthedocs.io/en/latest/user/configuration.html
 #   https://flake8.readthedocs.io/en/latest/user/error-codes.html
 #   https://pycodestyle.readthedocs.io/en/latest/intro.html#error-codes
-#   https://github.com/PyCQA/flake8-import-order
 #   https://gitlab.com/pycqa/flake8-docstrings
+max-line-length = 88
+max-complexity = 10
 docstring-convention = numpy
-import-order-style = google
-application-import-names = geovista
-select = C,D,E,F,I,W,B,B950
+select = C,D,E,F,W,B,B950
 ignore =
     # E203: whitespace before ':'
     E203,
@@ -29,6 +28,7 @@ ignore =
 exclude =
     .eggs
     build
+    plot.py
 
 [metadata]
 author = geovista developers
@@ -46,7 +46,7 @@ classifiers =
     Programming Language :: Python :: 3.8
     Programming Language :: Python :: 3.9
     Topic :: Scientific/Engineering :: Atmospheric Science
-description = Cartographic rendering and mesh analytics with PyVista
+description = Cartographic rendering and mesh analytics powered by PyVista
 long_description = file: README.md
 long_description_content_type = text/markdown
 keywords =
@@ -66,8 +66,10 @@ url = https://github.com/bjlittle/geovista
 version = attr: geovista.__version__
 
 [options]
+include_package_data = True
 install_requires =
     cartopy>=0.20
+    pooch
     pykdtree
     pyproj>=3.1
     pyvista
