re-home package to lib/geovista

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -4,7 +4,7 @@
 files: |
     (?x)(
         setup\.py|
-        geovista\/.+\.py
+        lib\/geovista\/.+\.py
     )
 minimum_pre_commit_version: 1.21.0
 
