--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,6 +1,6 @@
 # Top level files.
 include LICENSE
 
-recursive-include geovista *.txt
+recursive-include lib/geovista *.txt
 
 global-exclude *.pyc
