--- a/setup.cfg
+++ b/setup.cfg
@@ -73,6 +73,8 @@ install_requires =
     pyproj>=3.1
     pyvista
     pyvistaqt
+package_dir =
+    =lib
 packages = find:
 python_requires =
     >=3.7
@@ -87,9 +89,12 @@ dev =
 test =
     pytest>=6.0
 
+[options.packages.find]
+where = lib
+
 [tool:pytest]
 testpaths =
-    geovista/
+    lib/geovista/
 addopts =
     -ra
     -v
