--- a/setup.cfg
+++ b/setup.cfg
@@ -5,7 +5,7 @@
 #   https://pycodestyle.readthedocs.io/en/latest/intro.html#error-codes
 #   https://gitlab.com/pycqa/flake8-docstrings
 max-line-length = 88
-max-complexity = 10
+max-complexity = 13
 docstring-convention = numpy
 select = C,D,E,F,W,B,B950
 ignore =
@@ -72,6 +72,7 @@ install_requires =
     pyproj>=3.1
     pyvista
     pyvistaqt
+    vtk>=9
 package_dir =
     =lib
 packages = find:
