--- a/setup.cfg
+++ b/setup.cfg
@@ -30,8 +30,8 @@ exclude =
     build
 
 [metadata]
-author = geovista developers
-author_email = scitools-iris-dev@googlegroups.com
+author = GeoVista Devs
+author_email = geovista.git@gmail.com
 classifiers =
     Development Status :: 1 - Planning
     Intended Audience :: Science/Research
