--- a/.github/ISSUE_TEMPLATE/config.yml
+++ b/.github/ISSUE_TEMPLATE/config.yml
@@ -3,4 +3,4 @@ blank_issues_enabled: false
 contact_links:
   -  name: 💬 GeoVista GitHub Discussions
      url: https://github.com/bjlittle/geovista/discussions
-     about: Engage with the GeoVista community to discuss your issue
+     about: Engage with the GeoVista community to discuss your issue or just say "Hi!"
