--- a/setup.cfg
+++ b/setup.cfg
@@ -83,6 +83,11 @@ zip_safe = False
 cmap =
     cmocean
     colorcet
+docs =
+    sphinx
+    pydata-sphinx-theme
+    jupyter-sphinx
+    pythreejs
 dev =
     pre-commit
 test =
