--- a/setup.cfg
+++ b/setup.cfg
@@ -31,7 +31,7 @@ exclude =
 
 [metadata]
 author = GeoVista Devs
-author_email = geovista.git@gmail.com
+author_email = geovista.pub@gmail.com
 classifiers =
     Development Status :: 1 - Planning
     Intended Audience :: Science/Research
@@ -59,6 +59,8 @@ license_file = LICENSE
 name = geovista
 project_urls =
     Code = https://github.com/bjlittle/geovista
+    Discussions = https://github.com/bjlittle/geovista/discussions
+    Documentation = https://geovista.readthedocs.io/en/latest
     Issues = https://github.com/bjlittle/geovista/issues
 url = https://github.com/bjlittle/geovista
 version = attr: geovista.__version__
