--- a/setup.cfg
+++ b/setup.cfg
@@ -87,8 +87,9 @@ cmap =
     colorcet
 docs =
     sphinx
-    pydata-sphinx-theme
+    sphinx-copybutton
     jupyter-sphinx
+    pydata-sphinx-theme
     pythreejs
 dev =
     pre-commit
