docs source to src

--- a/docs/Makefile
+++ b/docs/Makefile
@@ -7,7 +7,7 @@ export PYVISTA_OFF_SCREEN := True
 # from the environment for the first two.
 SPHINXOPTS    ?=
 SPHINXBUILD   ?= sphinx-build
-SOURCEDIR     = source
+SOURCEDIR     = src
 BUILDDIR      = _build
 
 # Put it first so that "make" without argument is like "make help".
