--- a/.readthedocs.yml
+++ b/.readthedocs.yml
@@ -4,7 +4,7 @@ build:
     image: latest
 
 conda:
-    environment: requirements/geovista-docs.yml
+    environment: requirements/geovista.yml
 
 sphinx:
     configuration: docs/src/conf.py
