--- a/.readthedocs.yml
+++ b/.readthedocs.yml
@@ -1,20 +1,25 @@
 version: 2
 
 build:
-    image: latest
+  os: "ubuntu-20.04"
+  tools:
+    python: "mambaforge-4.10"
 
 conda:
-    environment: requirements/geovista.yml
+  environment: requirements/geovista.yml
 
 sphinx:
-    configuration: docs/src/conf.py
-    fail_on_warning: false
+  configuration: docs/src/conf.py
+  fail_on_warning: false
 
 python:
-    install: 
-        - method: setuptools
-          path: .
+  install: 
+    - method: 
+      path: .
+      extra_requirements:
+        - cmap
+        - docs
 
 formats:
-    - htmlzip
-    - pdf
+  - htmlzip
+  - pdf
