--- a/.readthedocs.yml
+++ b/.readthedocs.yml
@@ -1,9 +1,9 @@
 version: 2
 
 build:
-  os: "ubuntu-20.04"
+  os: ubuntu-20.04
   tools:
-    python: "mambaforge-4.10"
+    python: mambaforge-4.10
 
 conda:
   environment: requirements/geovista.yml
@@ -19,7 +19,3 @@ python:
       extra_requirements:
         - cmap
         - docs
-
-formats:
-  - htmlzip
-  - pdf
