--- a/tox.ini
+++ b/tox.ini
@@ -6,7 +6,8 @@ requires =
  
 [testenv:{py38,py39,py310}-lock]
 description =
-    Create explicit conda lock files for geovista.
+    Create explicit environment specification conda lock files
+    for geovista dependencies.
 platform =
     linux|darwin
 skip_install =
