add docs, doctest and linkcheck builders

--- a/tox.ini
+++ b/tox.ini
@@ -5,29 +5,49 @@ requires =
  
  
 [testenv:{py38,py39,py310}-lock]
+allowlist_externals =
+    cp
+changedir =
+    {env:LOCKDIR}
+conda_channels =
+    conda-forge
+conda_create_args =
+    --override-channels
+conda_deps =
+    pip
+    conda-lock
 description =
     Create explicit environment specification conda lock files
     for geovista dependencies.
 platform =
     linux|darwin
-skip_install =
-    true
-conda_deps =
-    pip
-    conda-lock
-conda_channels =
-    conda-forge
-conda_create_args =
-    --override-channels
-allowlist_externals =
-    cp
 setenv =
     LOCKDIR = {toxinidir}{/}requirements{/}locks
-    YMLFILE = {toxinidir}{/}requirements{/}geovista.yml
     TMPFILE = {envtmpdir}{/}geovista.yml
-changedir =
-    {env:LOCKDIR}
+    YMLFILE = {toxinidir}{/}requirements{/}geovista.yml
+skip_install =
+    true
 commands =
     cp {env:YMLFILE} {env:TMPFILE}
     python -c 'from sys import version_info as v; fh = open("{env:TMPFILE}", "a"); fh.write(f"\n  - python =\{v.major\}.\{v.minor\}\n")'
     conda-lock --channel conda-forge --file {env:TMPFILE} --platform linux-64 --filename-template "{envname}-\{platform\}.txt" {posargs}
+
+
+[testenv:{docs,doctest,linkcheck}]
+conda_spec =
+    {toxinidir}{/}requirements{/}locks{/}py310-lock-linux-64.txt
+description =
+    Build, test and lint the geovista documentation.
+envdir =
+    {toxworkdir}{/}sphinx
+setenv =
+    docs: BUILDER = html
+    doctest: BUILDER = doctest
+    linkcheck: BUILDER = linkcheck
+    BUILDDIR = {toxinidir}/docs/_build
+    SRCDIR = {toxinidir}/docs/src
+    PYVISTA_OFF_SCREEN = True
+usedevelop =
+    true
+commands =
+    sphinx-build -W --keep-going -b {env:BUILDER} -d {env:BUILDDIR}{/}doctrees {env:SRCDIR} {env:BUILDDIR}{/}{env:BUILDER} {posargs}
