--- a/setup.cfg
+++ b/setup.cfg
@@ -30,7 +30,7 @@ exclude =
     build
 
 [metadata]
-author = GeoVista Devs
+author = GeoVista Contributors
 author_email = geovista.pub@gmail.com
 classifiers =
     Development Status :: 1 - Planning
@@ -43,6 +43,7 @@ classifiers =
     Programming Language :: Python :: 3 :: Only
     Programming Language :: Python :: 3.8
     Programming Language :: Python :: 3.9
+    Programming Language :: Python :: 3.10
     Topic :: Scientific/Engineering :: Atmospheric Science
 description = Cartographic rendering and mesh analytics powered by PyVista
 long_description = file: README.md
