--- a/requirements/geovista.yml
+++ b/requirements/geovista.yml
@@ -26,7 +26,9 @@ dependencies:
   - pre-commit
 
 # test dependencies
+  - codecov
   - pytest >=6.0
+  - pytest-cov
 
 # documentation dependencies
   - sphinx
