--- a/tox.ini
+++ b/tox.ini
@@ -4,7 +4,7 @@ requires =
     tox-run-command
  
  
-[testenv:{py38,py39,py310}-lock]
+[testenv:py{38,39,310}-lock]
 allowlist_externals =
     cp
 changedir =
@@ -17,8 +17,7 @@ conda_deps =
     pip
     conda-lock
 description =
-    Create explicit environment specification conda lock files
-    for geovista dependencies.
+    Create explicit environment specification conda lock files for geovista dependencies.
 platform =
     linux|darwin
 setenv =
@@ -33,13 +32,32 @@ commands =
     conda-lock --channel conda-forge --file {env:TMPFILE} --platform linux-64 --filename-template "{envname}-\{platform\}.txt" {posargs}
 
 
+[testenv:py{38,39,310}-{linux,osx,win}-test]
+conda_spec =
+    py38-linux: {toxinidir}{/}requirements{/}locks{/}py38-lock-linux-64.txt
+    py39-linux: {toxinidir}{/}requirements{/}locks{/}py39-lock-linux-64.txt
+    py310-linux: {toxinidir}{/}requirements{/}locks{/}py310-lock-linux-64.txt
+    py38-osx: {toxinidir}{/}requirements{/}locks{/}py38-lock-osx-64.txt
+    py39-osx: {toxinidir}{/}requirements{/}locks{/}py39-lock-osx-64.txt
+    py310-osx: {toxinidir}{/}requirements{/}locks{/}py310-lock-osx-64.txt
+    py38-win: {toxinidir}{/}requirements{/}locks{/}py38-lock-win-64.txt
+    py39-win: {toxinidir}{/}requirements{/}locks{/}py39-lock-win-64.txt
+    py310-win: {toxinidir}{/}requirements{/}locks{/}py310-lock-win-64.txt
+description =
+    Perform geovista unit/integration tests.
+usedevelop =
+    true
+commands =
+    - pytest {posargs}
+
+
 [testenv:{docs,doctest,linkcheck}]
 conda_spec =
     {toxinidir}{/}requirements{/}locks{/}py310-lock-linux-64.txt
 description =
-    Build, test and lint the geovista documentation.
+    Build, test and link-check the geovista documentation.
 envdir =
-    {toxworkdir}{/}sphinx
+    {toxworkdir}{/}docs
 setenv =
     docs: BUILDER = html
     doctest: BUILDER = doctest
