--- a/tox.ini
+++ b/tox.ini
@@ -51,7 +51,7 @@ commands =
     - pytest {posargs}
 
 
-[testenv:{docs,doctest,linkcheck}]
+[testenv:doc-{build,check,test}]
 conda_spec =
     {toxinidir}{/}requirements{/}locks{/}py310-lock-linux-64.txt
 description =
@@ -59,9 +59,9 @@ description =
 envdir =
     {toxworkdir}{/}docs
 setenv =
-    docs: BUILDER = html
-    doctest: BUILDER = doctest
-    linkcheck: BUILDER = linkcheck
+    doc-build: BUILDER = html
+    doc-check: BUILDER = linkcheck
+    doc-test: BUILDER = doctest
     BUILDDIR = {toxinidir}/docs/_build
     SRCDIR = {toxinidir}/docs/src
     PYVISTA_OFF_SCREEN = True
