--- a/.github/workflows/ci-locks.yml
+++ b/.github/workflows/ci-locks.yml
@@ -130,8 +130,8 @@ jobs:
         body: |
           Conda lock files auto-updated to latest resolved environment for `geovista` dependencies.
         labels: |
-          New: Pull Request
-          Bot
+          new: pull request
+          bot
 
     - name: "Show pull-request"
       if: steps.cpr.outputs.pull-request-number != ''
