--- a/.github/workflows/ci-wheels.yml
+++ b/.github/workflows/ci-wheels.yml
@@ -41,17 +41,18 @@ jobs:
 
   upload_test_pypi:
     needs: [build]
+    name: "Upload to Test PyPI"
     runs-on: ubuntu-latest
     # upload to Test PyPI for every pull-request and commit on main or release feature branch
-    if: github.event_name != 'release' && (github.event.ref == 'main' || startsWith(github.event.ref, 'refs/tags/v'))
+    if: github.event_name != 'release' && ((github.event.ref == 'refs/heads/main') || startsWith(github.event.ref, 'refs/tags/v'))
     steps:
-      - uses: actions/download-artifact@v2
-        with:
-          name: pypi-artifacts
-          path: ${{ github.workspace }}/dist
+    - uses: actions/download-artifact@v2
+      with:
+        name: pypi-artifacts
+        path: ${{ github.workspace }}/dist
 
-      - uses: pypa/gh-action-pypi-publish@v1
-        with:
-          user: __token__
-          password: ${{ secrets.TEST_PYPI_API_TOKEN }}
-          repository_url: https://test.pypi.org/legacy/
+    - uses: pypa/gh-action-pypi-publish@v1
+      with:
+        user: __token__
+        password: ${{ secrets.TEST_PYPI_API_TOKEN }}
+        repository_url: https://test.pypi.org/legacy/
