--- a/.github/workflows/ci-wheels.yml
+++ b/.github/workflows/ci-wheels.yml
@@ -1,7 +1,6 @@
 # Reference:
 #   - https://github.com/actions/checkout
 #   - https://github.com/actions/download-artifact
-#   - https://github.com/actions/setup-python
 #   - https://github.com/actions/upload-artifact
 #   - https://github.com/pypa/build
 #   - https://github.com/pypa/gh-action-pypi-publish
@@ -30,7 +29,7 @@ jobs:
         # geovista is a pure python package, so simply use pypa/build
         pipx run build
 
-    - name: "List built distributions"
+    - name: "Show sdist/bdist"
       run: |
         ls -l ${{ github.workspace }}/dist
 
@@ -40,34 +39,8 @@ jobs:
         path: ${{ github.workspace }}/dist
 
 
-  test-artifacts:
-    needs: [build-artifacts]
-    name: "Test bdist wheel on ${{ matrix.os }} with Python ${{ matrix.python-version }}"
-    runs-on: ${{ matrix.os }}
-    strategy:
-      matrix:
-        os: [ubuntu-latest]
-        python-version: ["3.8", "3.9", "3.10"]
-    steps:
-    - uses: actions/download-artifact@v2
-      with:
-        name: pypi-artifacts
-        path: ${{ github.workspace }}/dist
-
-    - uses: actions/setup-python@v2
-      with:
-        python-version: ${{ matrix.python-version }}
-
-    - name: "Install bdist"
-      working-directory: ${{ github.workspace }}/dist
-      run: |
-        python -m pip install geovista-*.whl
-        python --version
-        python -c "import geovista; print(geovista.__version__)"
-
-
   publish-artifacts-test-pypi:
-    needs: [test-artifacts]
+    needs: [build-artifacts]
     name: "Publish to Test PyPI"
     runs-on: ubuntu-latest
     # upload to Test PyPI for every pull-request and commit on main or release feature branch
@@ -86,7 +59,7 @@ jobs:
 
 
   publish-artifacts-pypi:
-    needs: [test-artifacts]
+    needs: [build-artifacts]
     name: "Publish to PyPI"
     runs-on: ubuntu-latest
     # upload to PyPI for every GH release
@@ -100,4 +73,4 @@ jobs:
     - uses: pypa/gh-action-pypi-publish@release/v1
       with:
         user: __token__
-        password: ${{ secrets.TEST_PYPI_API_TOKEN }}
+        password: ${{ secrets.PYPI_API_TOKEN }}
