--- a/.github/workflows/ci-wheels.yml
+++ b/.github/workflows/ci-wheels.yml
@@ -1,11 +1,12 @@
 # Reference:
+#   - https://github.com/actions/cache
 #   - https://github.com/actions/checkout
 #   - https://github.com/actions/download-artifact
 #   - https://github.com/actions/upload-artifact
+#   - https://github.com/conda-incubator/setup-miniconda
 #   - https://github.com/pypa/build
 #   - https://github.com/pypa/gh-action-pypi-publish
 #   - https://test.pypi.org/help/#apitoken
-
 
 name: ci-wheels
 
@@ -39,8 +40,81 @@ jobs:
         path: ${{ github.workspace }}/dist
 
 
-  publish-artifacts-test-pypi:
+  test-artifacts:
     needs: [build-artifacts]
+    name: "Test bdist with py${{ matrix.version }}"
+    runs-on: ubuntu-latest
+    defaults:
+      run:
+        shell: bash -l {0}
+    env:
+      ENV_NAME: "ci-wheels"
+    strategy:
+      matrix:
+        version: ["38", "39", "310"]
+    steps:
+    - uses: actions/checkout@v2
+
+    - name: "Environment configure"
+      env:
+        # Maximum cache period (in weeks) before forcing a cache refresh.
+        CACHE_WEEKS: 2
+      run: |
+        echo "CACHE_PERIOD=$(date +%Y).$(expr $(date +%U) / ${CACHE_WEEKS})" >> ${GITHUB_ENV}
+
+    - name: "Conda package cache"
+      uses: actions/cache@v2
+      env:
+        # Increment the build number to force a cache refresh.
+        CACHE_BUILD: 0
+      with:
+        path: ~/conda_pkgs_dir
+        key: ${{ runner.os }}-conda-pkgs-${{ env.ENV_NAME }}-py${{ matrix.version }}-p${{ env.CACHE_PERIOD }}-b${{ env.CACHE_BUILD }}
+
+    - name: "Conda install"
+      uses: conda-incubator/setup-miniconda@v2
+      with:
+        miniforge-variant: Mambaforge
+        miniforge-version: latest
+        use-mamba: true
+        activate-environment: ${{ env.ENV_NAME }}
+        auto-update-conda: false
+        use-only-tar-bz2: true
+
+    - name: "Conda environment cache"
+      id: conda-env-cache
+      uses: actions/cache@v2
+      env:
+        # Increment the build number to force a cache refresh.
+        CACHE_BUILD: 0
+      with:
+        path: ${{ env.CONDA }}/envs/${{ env.ENV_NAME }}
+        key: ${{ runner.os }}-conda-env-${{ env.ENV_NAME }}-py${{ matrix.version }}-p${{ env.CACHE_PERIOD }}-b${{ env.CACHE_BUILD }}
+
+    - name: "Conda environment update"
+      if: steps.conda-env-cache.outputs.cache-hit != 'true'
+      run: |
+        mamba install --file ${{ github.workspace }}/requirements/locks/py${{ matrix.version }}-lock-linux-64.txt
+
+    - name: "Conda info"
+      run: |
+        conda info
+        conda list
+
+    - uses: actions/download-artifact@v2
+      with:
+        name: pypi-artifacts
+        path: ${{ github.workspace }}/dist
+
+    - name: "Install and import bdist"
+      working-directory: ${{ github.workspace }}/dist
+      run: |
+        python -m pip install geovista-*.whl
+        python -c "import geovista; print(f'Successfully imported geovista-{geovista.__version__}')"
+
+
+  publish-artifacts-test-pypi:
+    needs: [test-artifacts]
     name: "Publish to Test PyPI"
     runs-on: ubuntu-latest
     # upload to Test PyPI for every pull-request and commit on main or release feature branch
@@ -59,7 +133,7 @@ jobs:
 
 
   publish-artifacts-pypi:
-    needs: [build-artifacts]
+    needs: [test-artifacts]
     name: "Publish to PyPI"
     runs-on: ubuntu-latest
     # upload to PyPI for every GH release
