--- a/.github/workflows/ci-wheels.yml
+++ b/.github/workflows/ci-wheels.yml
@@ -43,6 +43,9 @@ jobs:
     needs: [build-artifacts]
     name: "Test bdist with py${{ matrix.version }}"
     runs-on: ubuntu-latest
+    defaults:
+      run:
+        shell: bash -l {0}
     env:
       ENV_NAME: "geovista-wheels"
     strategy:
