--- a/.github/workflows/ci-wheels.yml
+++ b/.github/workflows/ci-wheels.yml
@@ -110,7 +110,7 @@ jobs:
       working-directory: ${{ github.workspace }}/dist
       run: |
         python -m pip install geovista-*.whl
-        python -c "import geovista; print(f"geovista v{geovista.__version__}")"
+        python -c "import geovista; print(f'geovista v{geovista.__version__}')"
 
 
   publish-artifacts-test-pypi:
