--- a/.github/workflows/ci-wheels.yml
+++ b/.github/workflows/ci-wheels.yml
@@ -51,7 +51,6 @@ jobs:
     strategy:
       matrix:
         version: ["38", "39", "310"]
-
     steps:
     - uses: actions/checkout@v2
 
@@ -106,11 +105,11 @@ jobs:
         name: pypi-artifacts
         path: ${{ github.workspace }}/dist
 
-    - name: "Test bdist"
+    - name: "Install and import bdist"
       working-directory: ${{ github.workspace }}/dist
       run: |
         python -m pip install geovista-*.whl
-        python -c "import geovista; print(f'geovista v{geovista.__version__}')"
+        python -c "import geovista; print(f'Successfully imported geovista-{geovista.__version__}')"
 
 
   publish-artifacts-test-pypi:
