--- a/setup.cfg
+++ b/setup.cfg
@@ -37,9 +37,7 @@ classifiers =
     Intended Audience :: Science/Research
     License :: OSI Approved :: BSD License
     Natural Language :: English
-    Operating System :: POSIX
-    Operating System :: Unix
-    Operating System :: MacOS
+    Operating System :: OS Independent
     Programming Language :: Python :: 3 :: Only
     Programming Language :: Python :: 3.8
     Programming Language :: Python :: 3.9
