use plugin setuptools-scm-git-archive

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,6 +3,7 @@
 requires = [
     "setuptools>=45",
     "setuptools_scm[toml]>=6.2",
+    "setuptools_scm_git_archive",
     "wheel"
 ]
 # Defined by PEP 517
