add click dependency

--- a/setup.cfg
+++ b/setup.cfg
@@ -68,6 +68,7 @@ version = attr: geovista.__version__
 include_package_data = True
 install_requires =
     cartopy>=0.20
+    click
     pooch
     pyproj>=3.3
     pyvista
