--- a/tox.ini
+++ b/tox.ini
@@ -51,7 +51,7 @@ commands =
     - pytest {posargs}
 
 
-[testenv:doc-{build,check,test}]
+[testenv:doc-{build,linkcheck,test}]
 conda_spec =
     {toxinidir}{/}requirements{/}locks{/}py310-lock-linux-64.txt
 description =
@@ -60,7 +60,7 @@ envdir =
     {toxworkdir}{/}docs
 setenv =
     doc-build: BUILDER = html
-    doc-check: BUILDER = linkcheck
+    doc-linkcheck: BUILDER = linkcheck
     doc-test: BUILDER = doctest
     BUILDDIR = {toxinidir}/docs/_build
     SRCDIR = {toxinidir}/docs/src
