--- a/.github/workflows/ci-docs.yml
+++ b/.github/workflows/ci-docs.yml
@@ -20,7 +20,7 @@ jobs:
       CONDA_EXE: "mamba"
     strategy:
       matrix:
-        task: [build, check, test]
+        task: [build, linkcheck, test]
     steps:
     - name: "Checkout"
       uses: actions/checkout@v2
