--- a/tox.ini
+++ b/tox.ini
@@ -47,8 +47,11 @@ description =
     Perform geovista unit/integration tests.
 usedevelop =
     true
+passenv =
+    POST_COMMAND
 commands =
     - pytest {posargs}
+    {env:POST_COMMAND:}
 
 
 [testenv:doc-{build,linkcheck,test}]
