--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,7 +12,7 @@ build-backend = "setuptools.build_meta"
 
 [tool.black]
 line-length = 88
-target-version = ["py38", "py39"]
+target-version = ["py38", "py39", "py310"]
 include = '\.pyi?$'
 
 
