--- a/setup.cfg
+++ b/setup.cfg
@@ -69,6 +69,7 @@ include_package_data = True
 install_requires =
     cartopy>=0.20
     click
+    click-default-group
     pooch
     pyproj>=3.3
     pyvista
@@ -79,7 +80,11 @@ package_dir =
 packages = find:
 python_requires =
     >=3.8
-zip_safe = False
+zip_safe = False 
+
+[options.entry_points]
+console_scripts =
+    geovista = geovista.cli:main
 
 [options.extras_require]
 cmap =
