stub out entry-point

--- a/setup.cfg
+++ b/setup.cfg
@@ -82,9 +82,9 @@ python_requires =
     >=3.8
 zip_safe = False 
 
-[options.entry_points]
-console_scripts =
-    geovista = geovista.cli:main
+#[options.entry_points]
+#console_scripts =
+#    geovista = geovista.cli:main
 
 [options.extras_require]
 cmap =
