fix ci-locks needs

--- a/.github/workflows/ci-locks.yml
+++ b/.github/workflows/ci-locks.yml
@@ -98,7 +98,7 @@ jobs:
 
 
   create-pr:
-    needs: conda-lock
+    needs: build-locks
     name: "Create pull-request"
     runs-on: ubuntu-latest
     steps:
